<resources>
    <string name="app_name">UCInternship</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="LoginGoodDayTxt">Hi, Good Day!</string>
    <string name="PleaseSignInTxt">Please sign in to continue.</string>
    <string name="EmailHintTxt">Email</string>
    <string name="PasswordHintTxt">Password</string>
    <string name="LoginButtonText">Login</string>
    <string name="HelloTxt">Hello,</string>
    <string name="DashboardNameExampleTxt">Tinara Nathania</string>
    <string name="RecentProgressText">Recent Progress</string>
    <string name="RequestText">Request</string>
    <string name="EducationText">Education</string>
    <string name="EventText">Event</string>
    <string name="OtherText">Other</string>
    <string name="ProjectNameText">Project XXX</string>
    <string name="ProjectStatusText">Ongoing</string>
    <string name="ProjectCategoryText">Event</string>
    <string name="ProjectDescriptionTitleText">Project Description</string>
    <string name="ProjectDescriptionText">Lorem Ipsum is simply dummy text of the printing  and typesetting industry. Lorem Ipsum has been  the industry\'s standard dummy text ever since the  1500s, when an unknown printer took a galley of type  and scrambled it to make a type specimen book.</string>
    <string name="ProjectDurationTitleText">Duration: </string>
    <string name="ProjectDurationText">30 hours</string>
    <string name="ProjectDeadlineTitleText">Deadline: </string>
    <string name="ProjectDeadlineText">13 November 2020</string>
    <string name="ProjectAttachmentTitleText">Project Attachments</string>
    <string name="RejectButtonText">Reject</string>
    <string name="ApproveButtonText">Approve</string>
    <string name="AddCommentText">Add Your Comment</string>
    <string name="AddCommentBtnText">Add Comment</string>
    <string name="profile">Profile</string>
    <string name="list">List</string>
    <string name="offer">Offer</string>
    <string name="request">Request</string>
    <string name="home">Home</string>

    <string name="ProgressProjectNameTxt">Project XXX</string>
    <string name="ProgressNameTxt">Make a Powerpoint Presentation</string>
    <string name="ReqProjectAttachmentText">Visit the website to see the attachments.</string>
    <string name="YourApplicationsText">Your Applications</string>
    <string name="PendingStatusText">Pending</string>
    <string name="AcceptedStatusText">Accepted</string>
    <string name="TotalPendingText">3</string>
    <string name="TotalAcceptedText">0</string>
    <string name="ProjectText">Projects</string>
    <string name="no_attachment_text">No Attachment</string>
    <string name="application">Application</string>
    <string name="comment">Add Comment</string>
    <string name="pro_detail">Detail Project</string>
    <string name="task_det">Task Detail</string>
    <string name="dashboard">Dashboard</string>
    <string name="login">Login</string>
    <string name="profiile">Profile</string>
    <string name="pro_list">Project List</string>
    <string name="progress">Progress Detail</string>
    <string name="pro_offer">Project Offer</string>
    <string name="detail_progress">Detail Progress</string>
    <string name="logout">Logout</string>
    <string name="editprofile">Edit Profile</string>
    <string name="update">Update Profile</string>
    <string name="gender">gender</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="incoming_progress">Incoming Progress</string>
    <string name="DeclineButtonText">Decline</string>
</resources>