<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home" />
    <item
        android:id="@+id/nav_request"
        android:icon="@drawable/ic_baseline_question_answer_24"
        android:title="@string/request" />
    <item
        android:id="@+id/nav_offer"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/offer" />
    <item
        android:id="@+id/nav_list"
        android:icon="@drawable/ic_baseline_assignment_24"
        android:title="@string/list" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_baseline_account_circle_24"
        android:title="@string/profile" />
</menu>