<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/reqproject_cons"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.staff.RequestedProjectFragment" >

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/reqprojectbg_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_reqprojectbg"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/reqprojectlogo_img"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="172dp"
                android:layout_marginEnd="24dp"
                android:src="@drawable/ic_requestlogo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/reqprojectbg_img" />

            <TextView
                android:id="@+id/reqprojectname_txt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/ProjectNameText"
                android:textColor="#002842"
                android:textSize="30sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/reqprojectbg_img" />

            <TextView
                android:id="@+id/reqprojectstatus_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/projectstatustextbg"
                android:fontFamily="@font/opensans_regular"
                android:paddingLeft="16dp"
                android:paddingTop="4dp"
                android:paddingRight="16dp"
                android:paddingBottom="4dp"
                android:text="@string/ProjectStatusText"
                android:textColor="#FFFFFF"
                app:layout_constraintStart_toStartOf="@+id/reqprojectname_txt"
                app:layout_constraintTop_toBottomOf="@+id/reqprojectname_txt" />

            <TextView
                android:id="@+id/reqprojectcategory_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:background="@drawable/projectcategorytextbg"
                android:fontFamily="@font/opensans_regular"
                android:paddingLeft="16dp"
                android:paddingTop="4dp"
                android:paddingRight="16dp"
                android:paddingBottom="4dp"
                android:text="@string/ProjectCategoryText"
                android:textColor="#002842"
                app:layout_constraintBottom_toBottomOf="@+id/reqprojectstatus_txt"
                app:layout_constraintStart_toEndOf="@+id/reqprojectstatus_txt"
                app:layout_constraintTop_toTopOf="@+id/reqprojectstatus_txt" />

            <TextView
                android:id="@+id/reqprojectdesctitle_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/ProjectDescriptionTitleText"
                android:textColor="#C45E38"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@+id/reqprojectstatus_txt"
                app:layout_constraintTop_toBottomOf="@+id/reqprojectstatus_txt" />

            <TextView
                android:id="@+id/reqprojectdesc_txt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:fontFamily="@font/opensans_regular"
                android:text="@string/ProjectDescriptionText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/reqprojectdesctitle_txt"
                app:layout_constraintTop_toBottomOf="@+id/reqprojectdesctitle_txt" />

            <TextView
                android:id="@+id/reqprojectattachmenttitle_txt"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/ProjectAttachmentTitleText"
                android:textColor="#C45E38"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/reqprojectdesc_txt"
                app:layout_constraintTop_toBottomOf="@+id/reqprojectdesc_txt" />

            <TextView
                android:id="@+id/reqprojectattachment_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/ReqProjectAttachmentText"
                app:layout_constraintStart_toStartOf="@+id/reqprojectattachmenttitle_txt"
                app:layout_constraintTop_toBottomOf="@+id/reqprojectattachmenttitle_txt" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/rejectproject_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="24dp"
                android:background="@drawable/outlinebutton"
                android:text="@string/RejectButtonText"
                android:textColor="#CE674A"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/approveproject_btn"
                app:layout_constraintStart_toStartOf="@+id/reqprojectattachment_txt"
                app:layout_constraintTop_toBottomOf="@+id/reqprojectattachment_txt" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/approveproject_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:background="@drawable/buttonroundedrectangle"
                android:text="@string/ApproveButtonText"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="@+id/rejectproject_btn"
                app:layout_constraintEnd_toEndOf="@+id/reqprojectdesc_txt"
                app:layout_constraintStart_toEndOf="@+id/rejectproject_btn"
                app:layout_constraintTop_toTopOf="@+id/rejectproject_btn" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>